@@ -22,7 +22,7 @@
 		</a>
 	</li>
 	<li>
-		<a href="https://github.com/pfpayments/woocommerce/releases/tag/1.7.21/">
+		<a href="https://github.com/pfpayments/woocommerce/releases/tag/1.7.22/">
 			Source
 		</a>
 	</li>
@@ -76,7 +76,7 @@ You will be automatically notified once there are updates available for the plug
 					<div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Navigate to WooCommerce &#8594; Settings &#8594; PostFinance Checkout in your Wordpress backend and enter the PostFinance Checkout Space ID, User ID and Authentification Key that you can create in the <a href="https://checkout.postfinance.ch/space/select?target=/space/assistant" target="_blank">setup assistant</a>. Alternatively, you can manually create an <a href="https://checkout.postfinance.ch/en-us/doc/permission-concept#_create_application_users" target="_blank">application user</a>.</p>
+<p>Navigate to WooCommerce &#8594; Settings &#8594; PostFinance Checkout in your Wordpress backend and enter the PostFinance Checkout Space ID, User ID and Authentification Key that you can manually create an <a href="https://checkout.postfinance.ch/en-us/doc/permission-concept#_create_application_users" target="_blank">application user</a>.</p>
 <div class="imageblock">
 <div class="content">
 <img src="resource/settings.png" alt="settings"/>
@@ -112,17 +112,6 @@ WooCommerce &gt; Settings &gt; Payment.</p>
 <div class="content">
 <img src="resource/method.png" alt="Method Settings"/>
 </div>
-</div><div class="admonitionblock note">
-<table>
-<tr>
-<td class="icon">
-<div class="title">Note</div>
-</td>
-<td class="content">
-Additional payment methods are directly added in PostFinance Checkout. This can be done in the <a href="https://checkout.postfinance.ch/space/select?target=/space/assistant/payment" target="_blank">setup assistant</a>. Changes are synchronized automatically.
-</td>
-</tr>
-</table>
 </div>					</div>
 </div>					<div class="section" id="_customization">
 	<div class="section-title">
